# Estudo-Python

./: 01 - Calculo_bonus.py  02 - Tratamento_erros.py  03 - strings.py  04 - Controle de fluxo.py  Listas.ipynb  README.md
04 - Controle de fluxo/: 04 - Controle de fluxo.py
05 - Funcoes/: 05 - funcoes.py
05 - Funcoes/Projeto_1/: etl.py  projeto_1.py  vendas.csv
06 - Log/: usando logger.py
07 - criando uma etl/: .gitignore  etl.py  pipeline.py  pyproject.toml
09 - SQL/: SQLAlchemy.py  SQLAlchemy_exercicios.py  SQLModel_exercicios.py  SQLModel_introducao.py  consulta.sql  desafio.db
